# rm

./: .gitignore  2.0.cpp  CMakeLists.txt  gpt13b copy.cpp  push_test.txt  rm.cpp  rm2.cpp  rm3.cpp  test_git.txt  upload_test.txt
rm/: CMakeLists.txt  armor_detector.cpp  armor_detector.h  camera_control.cpp  camera_control.h  kalman_filter.cpp  kalman_filter.h  main.cpp  serial_port.cpp  serial_port.h
rm3/: CMakeLists.txt  README.md  algorithm.h  main.cpp  serial.h  vision.h
